tests/NormalTests/paczka1/fuzzy1/62249226.err
Error in line 7: S381 A961 33,5
Error in line 10: S381 A179 23,8
Error in line 19: hk1PJT5B A961 82,0
Error in line 30: S381 S381 27,42
Error in line 15: UoWb9047G8C A179 9,1
